<resources>
    <string name="app_name">Mercado Android App</string>
    <string name="welcome">Welcome to My First App</string>
    <string name="name">Danielle Jazmine Aliah N. Mercado</string>
    <string name="proceed">Proceed</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="sigunp">Sign Up</string>
    <string name="login">Log In</string>
    <string name="firstname">First Name</string>
    <string name="middlename">Middle Name</string>
    <string name="lastname">Last Name</string>
    <string name="email">Email</string>
    <string name="confirmpassword">Confirm Password</string>
    <string name="goback"> Go Back</string>
    <string name="save"> Save</string>
    <string name="back"> Back</string>
</resources>